# paraphym

./: .gitignore  .gitmodules  ARCHITECTURE.md  CANDLE_GENERATION_PIPELINE.md  CLIPPY_DENY_WARNINGS.md  Cargo.toml  FIXES_SUMMARY.md  IN_PRODUCTION_STUBS.md  TASK403.md  TASK404.md  TASK405.md  TURD.md  cargo-check-1.out  cargo_check_full.txt  clippy-deny-1.out  clippy-deny-10.out  clippy-deny-11.out  clippy-deny-2.out  clippy-deny-5.out  clippy-deny-6.out  clippy-deny-7.out  clippy-deny-8.out  clippy-deny-9.out  clippy-output.txt  clippy-simd.out  clippy-workspace-2.out  clippy-workspace.out  clippy_analysis.txt  clippy_check_results.txt  clippy_current.txt  clippy_detailed.txt  clippy_final.txt  clippy_full_output.txt  clippy_output.txt  clippy_round2.txt  clippy_session2.txt  clippy_session2_final.txt  clippy_warnings.txt  fix_compilation_errors.py  fix_memory_imports.py  (+12 more)
benches/: memory_benchmarks.rs  python_comparison_bench.rs  python_vs_rust.rs
benchmarks/: candle-qwen3-baseline.md
docs/: CANDLE_GENERATION_PIPELINE.md  CHAT_ARCHITECTURE.md  GLOSSARY.md  TOOL_CALLING.md
examples/: candle_agent_role_builder.rs  smoke_test_pipeline.rs  test_chat_loop.rs
task/: 002-convert-qwen3coder-to-quantized.md  003-fix-generator-remove-spawn-blocking.md  005-make-qwen3-default-model.md  006-benchmark-qwen3-in-paraphym.md  007-fix-phi4-reasoning-model.md  009-cleanup-and-final-testing.md  00_MASTER_CROSSBEAM_TO_TOKIO_CONVERSION.md  011-qwen3-remove-dead-code.md  012-qwen3-model-reload-per-request.md  013-qwen3-verify-default-impl.md  014-qwen3-temperature-defaults-inconsistent.md  016-download-lock-coordination.md  016-enforce-registry-only-access-pattern.md  01_CONVERT_IMAGE_EMBEDDING_POOL_TO_TOKIO_CHANNELS.md  02_CONVERT_TEXT_EMBEDDING_POOL_TO_TOKIO.md  03_CONVERT_LLAVA_VISION_POOL_TO_TOKIO.md  04_CONVERT_TEXT_TO_IMAGE_POOL_TO_TOKIO.md  05_CONVERT_TEXT_TO_TEXT_POOL_TO_TOKIO.md  06_CONVERT_POOL_CORE_TO_TOKIO.md  07_CONVERT_DOMAIN_CONCURRENCY_TO_TOKIO.md  08_CONVERT_REALTIME_CHAT_TO_TOKIO.md  11_ASYNC_CONVERT_TEXT_EMBEDDING_STELLA.md  13_ASYNC_CONVERT_TEXT_EMBEDDING_JINA_BERT.md  16_ASYNC_CONVERT_TEXT_TO_IMAGE_SD35.md  18_ASYNC_FIX_LLAVA_BLOCKING_THREAD.md  (+371 more)
(+1445 files in other folders)
