[workspace]
resolver = "3"
members = [
    "packages/simd",
    "packages/candle",
    "packages/cylo",
    "packages/sweetmcp/packages/capnp-client",
    "packages/sweetmcp/packages/graphql-client",
    "packages/sweetmcp/packages/json-client",
    "packages/sweetmcp/packages/mcp-client-traits",
    "packages/sweetmcp/packages/sweet-mcp-type",
    "packages/sweetmcp/packages/voice-tools",
]
exclude = ["tmp/candle", "tmp/*", "forks/surrealdb", "packages/sweetmcp/packages/autoconfig", "packages/sweetmcp/packages/axum", "packages/sweetmcp/packages/daemon", "packages/sweetmcp/packages/pingora", "packages/sweetmcp/packages/plugin-builder", "packages/sweetmcp/packages/sixel6vt"]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["CYRUP AI"]
repository = "https://github.com/cyrup-ai/paraphym"

