[workspace]
resolver = "3"
members = [
    "packages/simd",
    "packages/candle",
    "packages/cylo",
    "packages/sweetmcp/packages/autoconfig",
    "packages/sweetmcp/packages/axum",
    "packages/sweetmcp/packages/capnp-client",
    "packages/sweetmcp/packages/daemon",
    "packages/sweetmcp/packages/graphql-client",
    "packages/sweetmcp/packages/json-client",
    "packages/sweetmcp/packages/mcp-client-traits",
    "packages/sweetmcp/packages/pingora",
    "packages/sweetmcp/packages/plugin-builder",
    "packages/sweetmcp/packages/sse-client",
    "packages/sweetmcp/packages/stdio-client",
    "packages/sweetmcp/packages/sweet-mcp-type",
    "packages/sweetmcp/packages/voice-tools",
]
exclude = ["tmp/candle", "tmp/*", "forks/surrealdb", "packages/sweetmcp/packages/sixel6vt"]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["CYRUP AI"]
repository = "https://github.com/cyrup-ai/paraphym"

[workspace.dependencies]
ahash = "0.8.12"
async-trait = "0.1.89"
bytes = "1.10.1"
derivative = "2.2.0"
h2 = "0.4.12"
http = "1.3.1"
httparse = "1.10.1"
log = "0.4.28"
lru = "0.16.1"
once_cell = "1.21.3"
tokio = "1.47.1"

[patch.crates-io]
num-bigint-dig = { path = "tmp/num-bigint-dig" }

